Font and other small changes

--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&family=Open+Sans:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+                
 </head>
 <body>
   <div class="nav">
@@ -55,16 +57,16 @@
         <div class="right">
           <ul>Base Stats:
             <li>
-              Tenacity: 100%
+              Tenacity: 98<div class="percent">%</div>
             </li>
             <li>
-              Communication Skills: 100%
+              Communication Skills: 97<div class="percent">%</div>
             </li>
             <li>
-              Technical Skill: 95%
+              Technical Skill: 87<div class="percent">%</div>
             </li>
             <li>
-              Eye for Design: 95%
+              Eye for Design: 85<div class="percent">%</div>
             </li>
           </ul>
 
