--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&family=Open+Sans:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="nav">
@@ -78,10 +79,9 @@
                   <input type="submit" name="submit" value="SUBMIT" class="submit">
                 </div>
           </form>
-          
-    </div>
+        </div>
     
-    <footer style="position: absolute; bottom: 0;">
+    <footer>
         <div class="icons">
           <a  href="https://www.linkedin.com/in/michael-brady-91777a21a/" class="linkedin">
               <img class="social" src="images/linkedin.png">
@@ -109,6 +109,7 @@
           <div class="copy">&copy; Michael Brady 2022</div>
         </div>
     </footer>
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="script.js">
     </script>
