--- a/georgia.html
+++ b/georgia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon-1.png"/>
     <title>Michael Brady</title>
     <meta
       name="Michael Brady"
@@ -19,15 +20,17 @@
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="pagecontainer">
+    <div class="contentwrap">
   <div class="nav">
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
+              <li class="nav-item homelink">
                 <img src="images/arrow1.png" class="linkarrow" id="1"><a href="index.html" class="pagelink2" onmouseover="showArrow1()" onmouseout="hideArrow1()">HOME</a>
               </li>
               <li class="nav-item">
@@ -68,6 +71,7 @@
         </p>
         </div>
       </div>
+    </div>
       <footer>
         <div class="icons">
           <a  href="https://www.linkedin.com/in/michael-brady-91777a21a/" class="linkedin">
@@ -96,6 +100,7 @@
           <div class="copy">&copy; Michael Brady 2022</div>
         </div>
         </footer>
+      </div>
               <script src="script.js">
               </script>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
