--- a/mars.html
+++ b/mars.html
@@ -23,7 +23,7 @@
   <div class="pagecontainer">
     <div class="contentwrap">
   <div class="nav">
-    <nav class="navbar navbar-expand-md navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -63,6 +63,7 @@
         <p class="date">
             Feb 2022
         </p>
+        <img src="images/pixelhead.png" class="pixelhead">
         </div>
       </div>
       </div>
