--- a/georgia.html
+++ b/georgia.html
@@ -69,6 +69,7 @@
         <p class="date">
             Feb 2022 - Mar 2022
         </p>
+        <img src="images/pixelhead.png" class="pixelhead">
         </div>
       </div>
     </div>
