--- a/about.html
+++ b/about.html
@@ -18,7 +18,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&family=Open+Sans:wght@300&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-                
 </head>
 <body>
   <div class="pagecontainer">
@@ -55,20 +54,19 @@
     <div class="description">
         <div class="left">
           <img src="images/headshot.jpg" class="headshot">
-          <p class="num">No. 1013</p>
         </div>
         <div class="right">
           <ul>Base Stats:
-            <li>
+            <li class="statlist">
               Tenacity: 98<div class="percent">%</div>
             </li>
-            <li>
+            <li class="statlist">
               Communication Skills: 97<div class="percent">%</div>
             </li>
-            <li>
+            <li class="statlist">
               Technical Skill: 87<div class="percent">%</div>
             </li>
-            <li>
+            <li class="statlist">
               Eye for Design: 85<div class="percent">%</div>
             </li>
           </ul>
