--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     </div>
     <div class="contact">
         <h1 style="margin-top: 30px;">Contact</h1>
-        <form name="contact" method="POST" data-netlify="true" class="container-fluid row needs-validation" novalidate>
+        <form name="contact" action="contact.html" method="POST" data-netlify="true" class="container-fluid row needs-validation" novalidate>
                 <div class="sect">
                   <input type="text" name="name" placeholder="Name" class="form-control" required>
                   <div class="valid-feedback">
