Made th instead of h2 on Projects

--- a/projects.html
+++ b/projects.html
@@ -54,42 +54,50 @@
         <h1>Projects</h1>
         <table class="large">
         <tr>
+          <th>Piano With Georgia</th>
+          <th>Mars</th>
+        </tr>
+        <tr>
         <td class="proj">
-            <h2>Piano With Georgia</h2>
             <a href="georgia.html"><img src="images/pianowithgeorgia.png" class="projpic"></a>
         </td>
         <td class="proj">
-            <h2>Mars</h2>
             <a href="mars.html"><img src="images/mars.png" class="projpic"></a>
         </td>
         </tr>
         <tr>
+          <th>The Austin Hiking Club</th>
+          <th>Interaction Design Exercises</th>
+        </tr>
+        <tr>
             <td class="proj">
-                <h2>The Austin Hiking Club</h2>
                 <a href="hiking.html"><img src="images/hiking.png" class="projpic"></a>
             </td>
             <td class="proj">
-                <h2>Interaction Design Exercises</h2>
                 <a href="intdesign.html"><img src="images/intdirect.png" class="projpic"></a>
             </td>
             </tr>
         <tr>
+          <th>Portfolio Site First Draft</th>
+          <th>Capstone Project First Draft</th>
+        </tr>
+        <tr>
                 <td class="proj">
-                    <h2>Portfolio Site First Draft</h2>
                     <a href="portfirst.html"><img src="images/portfolio (2).png" class="projpic"></a>
                 </td>
                 <td class="proj">
-                    <h2>Capstone Project First Draft</h2>
                     <a href="capfirst.html"><img src="images/georgia1.png" class="projpic"></a>
                 </td>
         </tr>
         <tr>
+          <th>The Amy Beach Foundation</th>
+          <th>Schubert's Piano Sonatas</th>
+        </tr>
+        <tr>
             <td class="proj">
-                <h2>The Amy Beach Foundation</h2>
                 <a href="beach.html"><img src="images/beach.png" class="projpic"></a>
             </td>
             <td class="proj">
-                <h2>Schubert's Piano Sonatas</h2>
                 <a href="schubert.html"><img src="images/schubert.png" class="projpic"></a>
             </td>
             </tr>
