--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     <div class="pad"></div>
     <div class="description">
         <div class="left">
-          <img src="images/headshot.jpg" class="headshot">
+          <img src="images/headshot2.jpg" class="headshot">
         </div>
         <div class="right">
           <ul>Base Stats:
