Image Compression and Link Change

--- a/beach.html
+++ b/beach.html
@@ -54,7 +54,7 @@
         <h1>
             The Amy Beach Piano Foundation
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/interwww/beach/"><img src="images/beach.png" class="sitepic"></a>
+        <a href="http://webtrain.austincc.edu/~mbrady/interwww/beach/"><img src="images/beach.jpg" class="sitepic"></a>
         <div class="descwrap">
             This site was my final project for my Intermediate WWW Authoring, HTML, and CSS course. In this project,
             students had to design a website for a fictional organization. I came up with the idea of a foundation
