--- a/capfirst.html
+++ b/capfirst.html
@@ -54,7 +54,7 @@
         <h1>
             Piano With Georgia First Draft
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/capstone/seconddraft/index.php"><img src="images/georgia1.png" class="sitepic"></a>
+        <a href="http://webtrain.austincc.edu/~mbrady/capstone/seconddraft/index.php"><img src="images/georgia1.jpg" class="sitepic"></a>
         <div class="descwrap">
             Before I began my Capstone Project course, the final course as part of my Web Development Certification, 
             I played around with different ideas and eventually drafted a site in Jan 2022. It features a CSS animation
