--- a/georgia.html
+++ b/georgia.html
@@ -54,7 +54,7 @@
         <h1>
             Piano With Georgia
         </h1>
-        <a href="https://www.pianowithgeorgia.com"><img src="images/pianowithgeorgia.png" class="sitepic"></a>
+        <a href="https://www.pianowithgeorgia.com"><img src="images/pianowithgeorgia2.jpg" class="sitepic"></a>
         <div class="descwrap">
         <p>
             I made this site for Georgia Sears, a former co-worker at the Orpheus Academy. The site was my 
