--- a/hiking.html
+++ b/hiking.html
@@ -54,7 +54,7 @@
         <h1>
             The Austin Hiking Club
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/advwww/finalproject/index.html"><img src="images/hiking.png" class="sitepic"></a>
+        <a href="http://webtrain.austincc.edu/~mbrady/advwww/finalproject/index.html"><img src="images/hiking.jpg" class="sitepic"></a>
         <div class="descwrap">
             The final project for my Advanced WWW Authoring, HTML, and CSS course was to design a website for a fictional
             organization of our choice. Being a nature lover, I decided to make a website for the fictional Austin Hiking Club.
