--- a/intdesign.html
+++ b/intdesign.html
@@ -54,7 +54,7 @@
         <h1>
             Interaction Design Exercises
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/interactiondesign/COMPLETE/directory.html"><img src="images/intdirect.png" class="sitepic"></a>
+        <a href="http://webtrain.austincc.edu/~mbrady/interactiondesign/COMPLETE/directory.html"><img src="images/intdirect.jpg" class="sitepic"></a>
         <div class="descwrap">
             When I finished my Interaction Design course at ACC, the students had to create a directory with 
             links to all of the completed exercises. The exercises showcase a range of different CSS and JavaScript
