--- a/portfirst.html
+++ b/portfirst.html
@@ -54,7 +54,7 @@
         <h1>
             Portfolio Site First Draft
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/portfolioreact/"><img src="images/portfolio.png" class="sitepic"></a>
+        <a href="http://webtrain.austincc.edu/~mbrady/portfolioreact/"><img src="images/portfolio.jpg" class="sitepic"></a>
         <div class="descwrap">
             This site was my first experience with React: it was a wonderful experience learning the new framework. I found 
             the separation of sections of the site into components to be a neat way of organizing code. I also used SASS
