--- a/projects.html
+++ b/projects.html
@@ -59,10 +59,10 @@
         </tr>
         <tr>
         <td class="proj">
-            <a href="georgia.html"><img src="images/pianowithgeorgia.png" class="projpic"></a>
+            <a href="georgia.html"><img src="images/pianowithgeorgia2.jpg" class="projpic"></a>
         </td>
         <td class="proj">
-            <a href="mars.html"><img src="images/mars.png" class="projpic"></a>
+            <a href="mars.html"><img src="images/mars.jpg" class="projpic"></a>
         </td>
         </tr>
         <tr>
@@ -71,22 +71,22 @@
         </tr>
         <tr>
             <td class="proj">
-                <a href="hiking.html"><img src="images/hiking.png" class="projpic"></a>
+                <a href="hiking.html"><img src="images/hiking.jpg" class="projpic"></a>
             </td>
             <td class="proj">
-                <a href="intdesign.html"><img src="images/intdirect.png" class="projpic"></a>
+                <a href="intdesign.html"><img src="images/intdirect.jpg" class="projpic"></a>
             </td>
             </tr>
         <tr>
           <th>Portfolio Site First Draft</th>
-          <th>Capstone Project First Draft</th>
+          <th>Piano With Georgia First Draft</th>
         </tr>
         <tr>
                 <td class="proj">
-                    <a href="portfirst.html"><img src="images/portfolio (2).png" class="projpic"></a>
+                    <a href="portfirst.html"><img src="images/portfolio.jpg" class="projpic"></a>
                 </td>
                 <td class="proj">
-                    <a href="capfirst.html"><img src="images/georgia1.png" class="projpic"></a>
+                    <a href="capfirst.html"><img src="images/georgia1.jpg" class="projpic"></a>
                 </td>
         </tr>
         <tr>
@@ -95,10 +95,10 @@
         </tr>
         <tr>
             <td class="proj">
-                <a href="beach.html"><img src="images/beach.png" class="projpic"></a>
+                <a href="beach.html"><img src="images/beach.jpg" class="projpic"></a>
             </td>
             <td class="proj">
-                <a href="schubert.html"><img src="images/schubert.png" class="projpic"></a>
+                <a href="schubert.html"><img src="images/schubert.jpg" class="projpic"></a>
             </td>
             </tr>
         </table>
