--- a/schubert.html
+++ b/schubert.html
@@ -54,7 +54,7 @@
         <h1>
             Schubert's Piano Sonatas
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/interwww/schubert/gradedassignment1.html"><img src="images/schubert.png" class="sitepic"></a>
+        <a href="http://webtrain.austincc.edu/~mbrady/interwww/schubert/gradedassignment1.html"><img src="images/schubert.jpg" class="sitepic"></a>
         <div class="descwrap">
             For the first project of my Intermediate WWW Authoring, HTML, and CSS course, students had to design
             a webpage that displayed information we found interesting. I really love Franz Schubert's piano music,
