--- a/projects.html
+++ b/projects.html
@@ -55,50 +55,50 @@
         <table class="large">
         <tr>
           <th>Piano With Georgia</th>
-          <th>Mars</th>
+          <th>Doss Elementary PTA</th>
         </tr>
         <tr>
         <td class="proj">
             <a href="georgia.html"><img src="images/pianowithgeorgia2.jpg" class="projpic"></a>
         </td>
         <td class="proj">
-            <a href="mars.html"><img src="images/mars.jpg" class="projpic"></a>
+            <a href="doss.html"><img src="images/homepage.png" class="projpic"></a>
         </td>
         </tr>
         <tr>
-          <th>The Austin Hiking Club</th>
+          <th>Mars</th>
           <th>Interaction Design Exercises</th>
         </tr>
         <tr>
             <td class="proj">
-                <a href="hiking.html"><img src="images/hiking.jpg" class="projpic"></a>
+                <a href="mars.html"><img src="images/mars.jpg" class="projpic"></a>
             </td>
             <td class="proj">
                 <a href="intdesign.html"><img src="images/intdirect.jpg" class="projpic"></a>
             </td>
             </tr>
         <tr>
-          <th>Portfolio Site First Draft</th>
-          <th>Piano With Georgia First Draft</th>
+          <th>Music Portfolio</th>
+          <th>Nossas Novas</th>
         </tr>
         <tr>
                 <td class="proj">
-                    <a href="portfirst.html"><img src="images/portfolio.jpg" class="projpic"></a>
+                    <a href="music.html"><img src="images/music.png" class="projpic"></a>
                 </td>
                 <td class="proj">
-                    <a href="capfirst.html"><img src="images/georgia1.jpg" class="projpic"></a>
+                    <a href="nossas.html"><img src="images/nossas.png" class="projpic"></a>
                 </td>
         </tr>
         <tr>
+          <th>The Austin Hiking Club</th>
           <th>The Amy Beach Foundation</th>
-          <th>Schubert's Piano Sonatas</th>
         </tr>
         <tr>
             <td class="proj">
-                <a href="beach.html"><img src="images/beach.jpg" class="projpic"></a>
+                <a href="hiking.html"><img src="images/hiking.jpg" class="projpic"></a>
             </td>
             <td class="proj">
-                <a href="schubert.html"><img src="images/schubert.jpg" class="projpic"></a>
+                <a href="beach.html"><img src="images/beach.jpg" class="projpic"></a>
             </td>
             </tr>
         </table>
