--- a/beach.html
+++ b/beach.html
@@ -54,14 +54,14 @@
         <h1>
             The Amy Beach Piano Foundation
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/interwww/beach/"><img src="images/beach.jpg" class="sitepic"></a>
+        <a href="https://amybeach.netlify.app"><img src="images/beach.jpg" class="sitepic"></a>
         <div class="descwrap">
             This site was my final project for my Intermediate WWW Authoring, HTML, and CSS course. In this project,
             students had to design a website for a fictional organization. I came up with the idea of a foundation
             for the piano works of the American composer Amy Beach. The site features Beach's biographical
             information, a table of her piano works, and a donation page with a form for collecting credit card information.
             The form data doesn't submit anywhere, as HTMl and CSS were the only languages that we could use on this project. The site can be viewed on
-            <a href="http://webtrain.austincc.edu/~mbrady/interwww/beach/" class="sitelink">ACC's student web server</a>.
+            <a href="https://amybeach.netlify.app" class="sitelink">ACC's student web server</a>.
         <p class="date">
             Nov 2021
         </p>
