--- a/doss.html
+++ b/doss.html
@@ -52,18 +52,17 @@
 </div>
 <div class="projdesc">
         <h1>
-            Portfolio Site First Draft
+            Doss Elementary PTA
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/portfolioreact/"><img src="images/portfolio.jpg" class="sitepic"></a>
+        <a href="https://www.dosspta.org/"><img src="images/doss.png" class="sitepic"></a>
         <div class="descwrap">
-            This site was my first experience with React: it was a wonderful experience learning the new framework. I found 
-            the separation of sections of the site into components to be a neat way of organizing code. I also used SASS
-            to create a bubble background animation, where random numbers were used in the animation delays of each bubble. I ultimatly decided that
-            I wanted to make a separate page for each of my projects: since React is better suited to single page applications, I figured
-            traditional HTML would work better. The site can be viewed on
-            <a href="http://webtrain.austincc.edu/~mbrady/portfolioreact/" class="sitelink">ACC's student web server</a>.
+            In the summer of 2022, Nishi Goel, the president of the Doss Elementary PTA, contracted me to make 
+            updates on the Doss website. These included embedding a Google Calendar connected to Konstella, updating
+            the homepage slides using the Slider Revolution plugin, posting updates from Doss's Principal, and making
+            various changes to menus and site text. It can be viewed at
+            <a href="https://www.dosspta.org/" class="sitelink">https://www.dosspta.org/</a>.
         <p class="date">
-            Mar 2022
+            Dec 2022 - Jan 2022
         </p>
         <img src="images/pixelhead.png" class="pixelhead">
         </div>
