--- a/hiking.html
+++ b/hiking.html
@@ -54,13 +54,13 @@
         <h1>
             The Austin Hiking Club
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/advwww/finalproject/index.html"><img src="images/hiking.jpg" class="sitepic"></a>
+        <a href="https://austinhikingclub.netlify.app"><img src="images/hiking.jpg" class="sitepic"></a>
         <div class="descwrap">
             The final project for my Advanced WWW Authoring, HTML, and CSS course was to design a website for a fictional
             organization of our choice. Being a nature lover, I decided to make a website for the fictional Austin Hiking Club.
             The site features video backgrounds of Austin and other natural scenery. The contact form doesn't submit the data anywhere,
             as HTML and CSS were the only languages we could use for the exercise. It can be viewed on
-            <a href="http://webtrain.austincc.edu/~mbrady/advwww/finalproject/index.html" class="sitelink">ACC's student web server</a>.
+            <a href="https://austinhikingclub.netlify.app" class="sitelink">ACC's student web server</a>.
         <p class="date">
             Jan 2022
         </p>
