--- a/music.html
+++ b/music.html
@@ -50,24 +50,24 @@
         </div>
       </nav>
 </div>
-  <div class="projdesc">
+<div class="projdesc">
         <h1>
-            Schubert's Piano Sonatas
+            Portfolio Site First Draft
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/interwww/schubert/gradedassignment1.html"><img src="images/schubert.jpg" class="sitepic"></a>
+        <a href="https://mbpiano.netlify.app/"><img src="images/music.png" class="sitepic"></a>
         <div class="descwrap">
-            For the first project of my Intermediate WWW Authoring, HTML, and CSS course, students had to design
-            a webpage that displayed information we found interesting. I really love Franz Schubert's piano music,
-            so I decided to make a page displaying information about Schubert's last six piano sonatas. HTML tables
-            were used to organize the data. The page can be viewed on
-            <a href="http://webtrain.austincc.edu/~mbrady/interwww/schubert/gradedassignment1.html" class="sitelink">ACC's student web server</a>.
+            For my final project in my Web Design Tools course I took in Summer 2022, I decided to make a website to 
+            nicely present the music I have recorded. It features text animations using the @keyframes CSS rule, HTML
+            tables, an interactive hamburger menu using only HTML and CSS, and a contact form complete with JavaScript input validation. 
+            The site can be viewed
+            <a href="https://mbpiano.netlify.app/" class="sitelink">here</a>.
         <p class="date">
-            Oct 2021
+            Mar 2022
         </p>
         <img src="images/pixelhead.png" class="pixelhead">
         </div>
         </div>
-        </div>
+    </div>
         <footer>
           <div class="icons">
             <a  href="https://www.linkedin.com/in/michael-brady-91777a21a/" class="linkedin">
