--- a/nossas.html
+++ b/nossas.html
@@ -50,24 +50,25 @@
         </div>
       </nav>
 </div>
-<div class="projdesc">
+  <div class="projdesc">
         <h1>
-            Piano With Georgia First Draft
+            Nossas Novas
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/capstone/seconddraft/index.php"><img src="images/georgia1.jpg" class="sitepic"></a>
+        <a href="https://nossasnovasmusic.com/"><img src="images/nossas.png" class="sitepic"></a>
         <div class="descwrap">
-            Before I began my Capstone Project course, the final course as part of my Web Development Certification, 
-            I played around with different ideas and eventually drafted a site in Jan 2022. It features a CSS animation
-            where a quarter note spools out into a flower and a contact form that uses JavaScript for validation and 
-            PHP to email the form data. It can be viewed on
-            <a href="http://webtrain.austincc.edu/~mbrady/capstone/seconddraft/index.php" class="sitelink">ACC's student web server</a>.
+            In the Summer of 2022, I played with the local Austin band Nossas Novas. We play traditional and 
+            contemporary Brazilian music, jazz, funk, and rock. Coincidentally, I needed to make a WordPress
+            site for a project in my Web Design Tools course. I decided to redesign the old site the band was
+            using to make it more user-friendly and attractive. The site was made using the Elementor plugin on
+            WordPress. The site can be viewed 
+            <a href="https://nossasnovasmusic.com/" class="sitelink">here</a>.
         <p class="date">
-            Dec 2022 - Jan 2022
+            Oct 2021
         </p>
         <img src="images/pixelhead.png" class="pixelhead">
         </div>
         </div>
-    </div>
+        </div>
         <footer>
           <div class="icons">
             <a  href="https://www.linkedin.com/in/michael-brady-91777a21a/" class="linkedin">
