--- a/projects.html
+++ b/projects.html
@@ -62,7 +62,7 @@
             <a href="georgia.html"><img src="images/pianowithgeorgia2.jpg" class="projpic"></a>
         </td>
         <td class="proj">
-            <a href="doss.html"><img src="images/homepage.png" class="projpic"></a>
+            <a href="doss.html"><img src="images/doss.png" class="projpic"></a>
         </td>
         </tr>
         <tr>
