--- a/about.html
+++ b/about.html
@@ -64,10 +64,10 @@
               Communication Skills: 97<div class="percent">%</div>
             </li>
             <li class="statlist">
-              Technical Skill: 87<div class="percent">%</div>
+              Technical Skill: 93<div class="percent">%</div>
             </li>
             <li class="statlist">
-              Eye for Design: 85<div class="percent">%</div>
+              Eye for Design: 90<div class="percent">%</div>
             </li>
           </ul>
 
@@ -75,16 +75,16 @@
     </div>
     <div class="about">
         <p>
-            Originally from Baltimore, MD, I came to Austin to study piano at UT. I graduated with my Bachelor's in Music 
+            Originally from Baltimore, MD, I came to Austin, Texas to study piano at UT. I graduated with my Bachelor's in Music 
             Performance in Piano in 2019 and went on to obtain my Master's in Piano Performance from Texas State in 2021. 
-            I currently teach piano at the Orpheus Academy of Music in Austin, TX.
+            I taught piano at the Orpheus Academy of Music in Austin from 2019-2022.
           </p><br>
           <p>
             Although I received my degrees in music, I've always been interested in technology. 
             I took several coding courses in high school, worked as an audio/visual technician while at UT, 
             and have edited music videos for student projects at Orpheus. 
-            My interest in tech led me to the Web Certification program at ACC, where I hope to gain the skills necessary 
-            to pursue front end development as a career.
+            My interest in tech led me to the Web Certification program at ACC, where I learned the basics of HTML, CSS, and JavaScript.
+            I am now pursuing my Associates Degree in Computer Programming with a Web Programming specialization at ACC.
           </p>
     </div>
     </div>
