--- a/intdesign.html
+++ b/intdesign.html
@@ -54,14 +54,14 @@
         <h1>
             Interaction Design Exercises
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/interactiondesign/COMPLETE/directory.html"><img src="images/intdirect.jpg" class="sitepic"></a>
+        <a href="https://interactiondesignexercises.netlify.app"><img src="images/intdirect.jpg" class="sitepic"></a>
         <div class="descwrap">
             When I finished my Interaction Design course at ACC, the students had to create a directory with 
             links to all of the completed exercises. The exercises showcase a range of different CSS and JavaScript
             effects, like keyframe animations, CSS transitions, and jQuery animations. To make the directory more
             aesthetically appealing, I used SASS to create a twinkling stars background. Random numbers were used for
             the stars' placement and their twinkling rates. It can be viewed on
-            <a href="http://webtrain.austincc.edu/~mbrady/interactiondesign/COMPLETE/directory.html" class="sitelink">ACC's student web server</a>.
+            <a href="https://interactiondesignexercises.netlify.app" class="sitelink">ACC's student web server</a>.
         <p class="date">
             Jan 2022 - Feb 2022
         </p>
