--- a/mars.html
+++ b/mars.html
@@ -54,11 +54,11 @@
         <h1>
             Mars
         </h1>
-        <a href="http://webtrain.austincc.edu/~mbrady/interactiondesign/COMPLETE/14-mars.html"><img src="images/mars.jpg" class="sitepic"></a>
+        <a href="https://marsintdesign.netlify.app"><img src="images/mars.jpg" class="sitepic"></a>
         <div class="descwrap">
           This site was my final project for my Interaction Design course at ACC. With the help of our instructor,
           Greg Hervey, students made an informational site about Mars. It features parallax scrolling effects created
-          with Skrollr.js and can be viewed on <a href="http://webtrain.austincc.edu/~mbrady/interactiondesign/COMPLETE/14-mars.html" class="sitelink">
+          with Skrollr.js and can be viewed on <a href="https://marsintdesign.netlify.app" class="sitelink">
           ACC's student web server</a>
         <p class="date">
             Feb 2022
