Updates to Nossas Novas Section

--- a/nossas.html
+++ b/nossas.html
@@ -54,14 +54,14 @@
         <h1>
             Nossas Novas
         </h1>
-        <a href="https://nossasnovasmusic.com/"><img src="images/nossas.png" class="sitepic"></a>
+        <a href="https://nossasnovas.com/"><img src="images/nossas.png" class="sitepic"></a>
         <div class="descwrap">
             In the Summer of 2022, I played with the local Austin band Nossas Novas. We play traditional and 
-            contemporary Brazilian music, jazz, funk, and rock. Coincidentally, I needed to make a WordPress
-            site for a project in my Web Design Tools course. I decided to redesign the old site the band was
-            using to make it more user-friendly and attractive. The site was made using the Elementor plugin on
-            WordPress. The site can be viewed 
-            <a href="https://nossasnovasmusic.com/" class="sitelink">here</a>.
+            contemporary Brazilian music, jazz, funk, and rock. Our site was made a few years ago
+            by our guitarist with WordPress, but it needed to be renovated. There wasn't any color and 
+            it wasn't very user friendly. I collaborated with our singer to make the site more attractive 
+            and intiutive. The site can be viewed 
+            <a href="https://nossasnovas.com/" class="sitelink">here</a>.
         <p class="date">
             Oct 2021
         </p>
