Added JavaScript Calculator

--- a/calc.html
+++ b/calc.html
@@ -52,16 +52,17 @@
 </div>
   <div class="projdesc">
         <h1>
-            The Amy Beach Piano Foundation
+            JavaScript Calculator
         </h1>
-        <a href="https://amybeach.netlify.app"><img src="images/beach.jpg" class="sitepic"></a>
+        <a href="https://spontaneous-creponne-c5cf54.netlify.app/"><img src="images/calculator.jpg" class="sitepic"></a>
         <div class="descwrap">
-            This site was my final project for my Intermediate WWW Authoring, HTML, and CSS course. In this project,
-            students had to design a website for a fictional organization. I came up with the idea of a foundation
-            for the piano works of the American composer Amy Beach. The site features Beach's biographical
-            information, a table of her piano works, and a donation page with a form for collecting credit card information.
-            The form data doesn't submit anywhere, as HTMl and CSS were the only languages that we could use on this project. The site can be viewed on
-            <a href="https://amybeach.netlify.app" class="sitelink">ACC's student web server</a>.
+            This webpage was an Assignment made for my Beginning Web Programming Course I took during my Associate's
+            at ACC. For this assignment, I used HTML, CSS, and JavaScript to create a fully functional math
+            calculator that can handle a wide variety of operations and equations. The calculator operates using a variety
+            of functions and event handlers. Users can input numbers and symbols using the on-screen keypad or their
+            own keyboard. It is on a fictional site called "Math Table" which provides math resources for children. Since
+            the calculator was the main focus of the assignment, the other links are for display only and don't go anywhere.
+            The webpage can be viewed <a href="https://spontaneous-creponne-c5cf54.netlify.app/" class="sitelink">here</a>.
         <p class="date">
             Nov 2021
         </p>
