--- a/projects.html
+++ b/projects.html
@@ -78,29 +78,29 @@
             </td>
             </tr>
         <tr>
-          <th>Music Portfolio</th>
+          <th>JavaScript Calculator</th>
           <th>Nossas Novas</th>
         </tr>
         <tr>
-                <td class="proj">
-                    <a href="music.html"><img src="images/music.png" class="projpic"></a>
-                </td>
-                <td class="proj">
-                    <a href="nossas.html"><img src="images/nossas.png" class="projpic"></a>
-                </td>
+            <td class="proj">
+              <a href="calc.html"><img src="images/calculator.jpg" class="projpic"></a>
+            </td>
+            <td class="proj">
+              <a href="nossas.html"><img src="images/nossas.png" class="projpic"></a>
+            </td>
         </tr>
         <tr>
           <th>The Austin Hiking Club</th>
-          <th>The Amy Beach Foundation</th>
+          <th>Music Portfolio</th>
         </tr>
         <tr>
             <td class="proj">
                 <a href="hiking.html"><img src="images/hiking.jpg" class="projpic"></a>
             </td>
             <td class="proj">
-                <a href="beach.html"><img src="images/beach.jpg" class="projpic"></a>
+              <a href="music.html"><img src="images/music.png" class="projpic"></a>
             </td>
-            </tr>
+        </tr>
         </table>
         </div>
     </div>
