--- a/doss.html
+++ b/doss.html
@@ -56,13 +56,14 @@
         </h1>
         <a href="https://www.dosspta.org/"><img src="images/doss.png" class="sitepic"></a>
         <div class="descwrap">
-            In the summer of 2022, Nishi Goel, the president of the Doss Elementary PTA, contracted me to make 
-            updates on the Doss website. These included embedding a Google Calendar connected to Konstella, updating
+            In 2022, Nishi Goel, the president of the Doss Elementary PTA, contracted me for work on 
+            Doss's WordPress website. This included embedding a Google Calendar connected to Konstella, updating
             the homepage slides using the Slider Revolution plugin, posting updates from Doss's Principal, and making
-            various changes to menus and site text. It can be viewed at
+            various changes to menus and site text. Additionally, I helped to run the school store with WooCommerce, adding new items
+            and creating excel reports for item distribution. The site can be viewed at
             <a href="https://www.dosspta.org/" class="sitelink">https://www.dosspta.org/</a>.
         <p class="date">
-            Dec 2022 - Jan 2022
+            Jun 2022 - Dec 2022
         </p>
         <img src="images/pixelhead.png" class="pixelhead">
         </div>
