--- a/hiking.html
+++ b/hiking.html
@@ -59,8 +59,8 @@
             The final project for my Advanced WWW Authoring, HTML, and CSS course was to design a website for a fictional
             organization of our choice. Being a nature lover, I decided to make a website for the fictional Austin Hiking Club.
             The site features video backgrounds of Austin and other natural scenery. The contact form doesn't submit the data anywhere,
-            as HTML and CSS were the only languages we could use for the exercise. It can be viewed on
-            <a href="https://austinhikingclub.netlify.app" class="sitelink">ACC's student web server</a>.
+            as HTML and CSS were the only languages we could use for the exercise. It can be viewed
+            <a href="https://austinhikingclub.netlify.app" class="sitelink">here</a>.
         <p class="date">
             Jan 2022
         </p>
