--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="script">
         
             <div class="scripttext">
-            A wild WEB DEVELOPER appeared!
+            A wild FRONT-END DEVELOPER appeared!
             What will the potential client/employer do?
             </div>
         
