--- a/intdesign.html
+++ b/intdesign.html
@@ -61,7 +61,7 @@
             effects, like keyframe animations, CSS transitions, and jQuery animations. To make the directory more
             aesthetically appealing, I used SASS to create a twinkling stars background. Random numbers were used for
             the stars' placement and their twinkling rates. It can be viewed on
-            <a href="https://interactiondesignexercises.netlify.app" class="sitelink">ACC's student web server</a>.
+            <a href="https://interactiondesignexercises.netlify.app" class="sitelink">here</a>.
         <p class="date">
             Jan 2022 - Feb 2022
         </p>
