--- a/mars.html
+++ b/mars.html
@@ -58,8 +58,8 @@
         <div class="descwrap">
           This site was my final project for my Interaction Design course at ACC. With the help of our instructor,
           Greg Hervey, students made an informational site about Mars. It features parallax scrolling effects created
-          with Skrollr.js and can be viewed on <a href="https://marsintdesign.netlify.app" class="sitelink">
-          ACC's student web server</a>
+          with Skrollr.js and can be viewed <a href="https://marsintdesign.netlify.app" class="sitelink">
+          here</a>
         <p class="date">
             Feb 2022
         </p>
