--- a/music.html
+++ b/music.html
@@ -52,7 +52,7 @@
 </div>
 <div class="projdesc">
         <h1>
-            Portfolio Site First Draft
+            Music Portfolio
         </h1>
         <a href="https://mbpiano.netlify.app/"><img src="images/music.png" class="sitepic"></a>
         <div class="descwrap">
@@ -62,7 +62,7 @@
             The site can be viewed
             <a href="https://mbpiano.netlify.app/" class="sitelink">here</a>.
         <p class="date">
-            Mar 2022
+            Jul 2022
         </p>
         <img src="images/pixelhead.png" class="pixelhead">
         </div>
