--- a/nossas.html
+++ b/nossas.html
@@ -56,14 +56,14 @@
         </h1>
         <a href="https://nossasnovas.com/"><img src="images/nossas.png" class="sitepic"></a>
         <div class="descwrap">
-            In the Summer of 2022, I played with the local Austin band Nossas Novas. We play traditional and 
+            I currently play with the local Austin band Nossas Novas. We play traditional and 
             contemporary Brazilian music, jazz, funk, and rock. Our site was made a few years ago
             by our guitarist with WordPress, but it needed to be renovated. There wasn't any color and 
             it wasn't very user friendly. I collaborated with our singer to make the site more attractive 
             and intiutive. The site can be viewed 
             <a href="https://nossasnovas.com/" class="sitelink">here</a>.
         <p class="date">
-            Oct 2021
+            Sept 2022
         </p>
         <img src="images/pixelhead.png" class="pixelhead">
         </div>
